# jhcontext-crewai

./: .gitignore  README.md  pyproject.toml
agent/: output_dir.py  requirements.txt  run.py  validate.py
agent/crews/benefits_a3i/: __init__.py  crew.py  lib.py
agent/crews/education/: README.md  crew.py
agent/crews/finance/: crew.py
agent/crews/healthcare/: crew.py
agent/crews/recommendation/: crew.py
agent/flows/: benefits_a3i_flow.py  education_flow.py  finance_flow.py  healthcare_flow.py  hiring_flow.py  recommendation_flow.py
agent/flows/education/: README.md  __init__.py  fair_grading.py  oral_feedback_grading.py  rubric_feedback_grading.py
agent/libs/: llms.py
agent/ontologies/: __init__.py  education.py  finance.py  healthcare.py  recommendation.py  validator.py
agent/protocol/: context_mixin.py  offline_context_mixin.py  sync_manager.py
agent/scenarios/benefits_a3i/: __init__.py  citizen_query.py  run.py  simulate.py
api/: app.py
api/chalicelib/storage/: sqlite.py  sqlite_pii_vault.py
docs/: api-reference.md  architecture.md  forwarding-policy.md  local-development.md  security.md  validation.md
docs/crews/: education.md  education_rubric_feedback_grading.md  finance.md  healthcare.md  recommendation.md
output/runs/v01/: education_audit.json  education_equity_prov.ttl  education_grading_envelope.json  education_grading_envelopes.json  education_grading_metrics.json  education_grading_prov.ttl  healthcare_prov.ttl  (+11 more)
tests/: test_app_local_mode.py  test_healthcare_flow.py  test_hiring_flow.py  test_ontologies.py  test_sqlite_storage.py
(+62 files in other folders)
