[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jhcontext-crewai"
version = "0.1.0"
description = "Production deployment of PAC-AI protocol with CrewAI agents on AWS"
requires-python = ">=3.10"
dependencies = [
    "jhcontext>=0.5.0,<0.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
api = [
    "chalice>=1.32",
    "boto3>=1.28",
]
agent = [
    "crewai>=1.9",
    "crewai-tools>=1.9",
]
all = ["jhcontext-crewai[api,agent]"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "moto[dynamodb,s3]>=5.0",
]
